# hakyll-sass

./: .gitignore  Changelog.md  README.md  hakyll-sass.cabal
.github/workflows/: build.yml  format.yml  lint.yml  linux.yml  outdated.yml
src/Hakyll/Web/: Sass.hs
